--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@popperjs/core": "2.9.1",
     "@tailwindcss/forms": "0.2.1",
     "chart.js": "2.9.4",
+    "class-validator": "^0.13.1",
     "firebase": "^8.8.1",
+    "firebase-admin": "^9.11.0",
+    "fireorm": "^0.23.0",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "js-cookie": "^3.0.1",
@@ -18,12 +21,14 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-scripts": "4.0.3",
+    "reflect-metadata": "^0.1.13",
     "tailwindcss": "2.0.4"
   },
   "scripts": {
     "start": "next start",
     "build": "next build",
     "dev": "next dev",
+    "export": "next export",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm run dev",
     "build:tailwind": "tailwind build styles/index.css -o styles/tailwind.css"
   },
