--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/fontawesome-free": "5.15.3",
     "@popperjs/core": "2.9.1",
     "@tailwindcss/forms": "0.2.1",
+    "alpinejs": "^3.5.0",
     "chart.js": "2.9.4",
     "class-validator": "^0.13.1",
     "firebase": "^8.8.1",
@@ -16,11 +17,25 @@
     "fireorm": "^0.23.0",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
+    "html-to-image": "^1.9.0",
+    "html-to-pdfmake": "^2.3.6",
+    "html2canvas": "^1.3.2",
+    "image-upload-react": "^1.4.5",
     "js-cookie": "^3.0.1",
+    "jspdf": "^2.4.0",
     "next": "10.0.9",
+    "pdfmake": "^0.2.4",
     "react": "17.0.1",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
+    "react-datepicker": "^4.3.0",
     "react-dom": "17.0.1",
+    "react-images-upload": "^1.2.8",
+    "react-multi-select-component": "^4.1.13",
+    "react-radio-buttons": "^1.2.2",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
+    "react-signature-canvas": "^1.0.3",
     "reflect-metadata": "^0.1.13",
     "tailwindcss": "2.0.4"
   },
