--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "alpinejs": "^3.5.0",
     "chart.js": "2.9.4",
     "class-validator": "^0.13.1",
+    "emailjs": "^3.6.0",
     "firebase": "^8.8.1",
     "firebase-admin": "^9.11.0",
     "fireorm": "^0.23.0",
+    "fs": "0.0.1-security",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "html-to-image": "^1.9.0",
